# Close2GL-INF01009

./: .clangd  .gitignore  CMakeLists.txt  Makefile.standalone  README.md  imgui.ini  triangles.frag  triangles.vert
include/: camera_gui.hpp  close_to_gl_camera.hpp  close_to_gl_model.hpp  fps_counter.hpp  model-loader.hpp  open_gl_matrices.hpp
src/: camera_gui.cpp  camera_gui_mac.mm  fps_counter.cpp  model-loader.cpp  open_gl_matrices.cpp
src/close-to-gl/: close_to_gl_camera.cpp  close_to_gl_model.cpp
src/triangles/: main.cpp
